<resources>
    <string name="app_name">Sloth Time</string>
    <string name="title_all_timers">All Timers</string>
    <string name="title_active_timers">Active Timers</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_timer">Add Timer</string>
    <string name="timer_types">Timer Types</string>
    <string name="prebuilt_timers">Prebuilt Timers</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_select_theme">Select Theme</string>

    <!-- Theme Selection -->
    <string name="theme_one">Blue Theme</string>
    <string name="theme_two">Green Theme</string>
    <string name="theme_three">Red Theme</string>
    <string name="settings_tips">Choose to change theme</string>

    <!-- All Timers -->
    <string name="steps_text">Steps</string>
    <string name="edit_text">Edit</string>
    <string name="timer_name_hint">Timer Name</string>
    <string name="timer_information_hint">Timer Information</string>
    <string name="timer_edit_text">Remove which step?</string>
    <string name="add_step_button">Add a step</string>
    <string name="done_button">Done</string>

    <!-- Timer Types -->
    <string name="timer_types_tips">Or choose from pre-built timers...</string>
    <string name="timer_types_menu">Create your own timer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
