<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.activity.AddTimer">

    <EditText
        android:id="@+id/timerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/timer_name_hint"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/stepsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_below="@id/timerName"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/timerName"
        android:layout_alignParentRight="true"/>

    <ListView
        android:id="@+id/stepsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stepsText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/addStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_step_button"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/stepsList"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        />

</RelativeLayout>
