<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fragments.Settings">

    <!-- TODO: Update blank fragment layout -->


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentTop="true">
        <RadioButton
            android:id="@+id/themeOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/theme_one"
            android:textAppearance="?android:textAppearanceLarge"/>
        <RadioButton
            android:id="@+id/themeTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_two"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"/>
        <RadioButton
            android:id="@+id/themeThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_three"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"/>

    </RadioGroup>

    <TextView
        android:id="@+id/settingsTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_tips"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
